infra/ansible/k8s-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: tunefy-dev
spec:
  selector:
    run: nginx-test
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
